--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "convict": "^5.2.0",
     "dotenv": "^8.2.0",
+    "ioredis": "4.14.1",
     "pino": "^5.14.0",
     "pino-pretty": "^3.4.0",
     "streaming-iterables": "^4.1.1"
@@ -53,6 +54,7 @@
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "@types/convict": "4.2.1",
     "@types/dotenv": "8.2.0",
+    "@types/ioredis": "4.14.1",
     "@types/node": "12.12.21",
     "@types/pino": "5.20.0",
     "@types/prettier": "1.19.0",
